@@ -166,7 +166,7 @@ public class DeviceUpgradePanel extends RMTablePanel< DeviceUpgrade >
     this.editor = null;
     Remote remote = remoteConfig.getRemote();
     DeviceUpgrade newUpgrade = editor.getDeviceUpgrade();
-    if ( remote.getSegmentTypes() != null && !remote.getSegmentTypes().contains( 0x10 ) 
+    if ( remote.getSegmentTypes() != null && !remote.isSSD() && !remote.getSegmentTypes().contains( 0x10 ) 
         && !remote.getSegmentTypes().contains( 0x0F ) && newUpgrade != null && newUpgrade.needsProtocolCode() )
     {
       // Such remotes do not support device upgrades that need a protocol upgrade
